# dashboard-mercado-laboral-co

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: main.py
docs/: decisiones_tecnicas.md
docs/screenshots/: README.md
notebooks/: 00_explorar_diccionario.ipynb  01_explorar_base_anual.ipynb
scripts/: push.py  tabla_validacion.py
src/: config.py  etl.py  indicators.py  validate.py
tests/: test_dictionary.py
